# ParrotPod

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  render.yaml  start.bat
backend/: .env.example  README.md  cleanup_sessions.py  database.py  livekit-setup.py  main.py  models.py  output.txt  output_full.txt  pyproject.toml  render_start.sh  requirements.txt  test_livekit.py  voice_agent.py  whatsapp_bridge.js
backend/routers/: agents.py  config.py  dashboard.py  files.py  notifications.py  sessions.py  telephony.py  voices.py  whatsapp.py
backend/whatsapp_sessions/: app-state-sync-key-AAAAAIdc.json  app-state-sync-version-critical_block.json  app-state-sync-version-regular.json  creds.json  pre-key-1.json  pre-key-10.json  pre-key-11.json  pre-key-12.json  pre-key-13.json  pre-key-14.json  pre-key-15.json  pre-key-16.json  pre-key-17.json  pre-key-18.json  pre-key-19.json  pre-key-2.json  pre-key-20.json  pre-key-21.json  pre-key-22.json  pre-key-23.json  pre-key-24.json  pre-key-25.json  pre-key-26.json  pre-key-27.json  pre-key-28.json  pre-key-29.json  pre-key-3.json  pre-key-30.json  pre-key-4.json  pre-key-5.json  pre-key-6.json  pre-key-7.json  pre-key-8.json  pre-key-9.json  session-923244319511.0.json
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx  PasswordShield.tsx  Sidebar.tsx  VoiceTestModal.tsx
frontend/src/docs/: DocsLayout.tsx
frontend/src/hooks/: useApi.ts
screenshots/: desktop.ini
(+15 files in other folders)
